--- a/calculator.css
+++ b/calculator.css
@@ -1,37 +1,92 @@
+* {
+  background-color: lightblue;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+}
+
+h1 {
+  font-family: Georgia, serif;
+  font-size: 50px;
+  color: #6969c3;
+  text-align: center;
+  text-shadow: 1px 1px 1px black;
+}
+
+.display-master {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 400px;
+  margin-bottom: 10px;
+}
+
+.master-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 400px;
+}
 .button {
-    width: 80px;
-    height: 40px;
-    background-color: #6969b3;
-    border: 0px;
-    color: #ffffffca;
-    border-radius: 6px;
-    box-shadow: 3px 5px 5px black;
-  }
+  width: 80px;
+  height: 40px;
+  background-color: #6969b3;
+  border: 0px;
+  color: #ffffffca;
+  border-radius: 6px;
+  box-shadow: 1px 3px 3px black;
+}
 
-  button:hover {
-    background-color: #98c1d9;
-  }
+button:hover {
+  background-color: #98c1d9;
+}
 
-  button:active {
-    box-shadow: 2px 4px 4px black;
-  }
+button:active {
+  box-shadow: 2px 4px 0px black;
+}
 
-  .flexContainer {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: baseline;
-    width: 390px;
-    row-gap: 8px;
-  }
+.flexContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: baseline;
+  width: 390px;
+  row-gap: 8px;
+}
 
-  .displayContainer {
-    display: flex;
-    justify-content: flex-end;
-    width: 390px;
-  }
+.displayContainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  max-width: 365px;
+  min-height: 60px;
+  border-radius: 10px;
+  background-color: rgba(50, 50, 50, 1);
+  padding: 10px;
+  color: azure;
+  overflow: hidden;
+  white-space: nowrap;
+}
 
-  #display {
-    margin-right: 20px;
-  }
+#display {
+  width: 100%;
+  text-align: right;
+  background-color: rgba(50, 50, 50, 0.8);
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 2rem;
+}
